[workspace]
members = ["packages/index", "packages/core", "packages/macros"]
exclude = [
    "packages/tests/env_always_async_test",
    "packages/tests/feature_futures_join_test",
]
resolver = "2"

[workspace.package]
version = "0.2.4"                                #tag:release-version
edition = "2021"
authors = ["mtn81 <nantsuka2011@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mtn81/portaldi"

[workspace.dependencies.portaldi-core]
path = "packages/core" #tag:release-version
version = "0.2.4"

[workspace.dependencies.portaldi-macros]
path = "packages/macros" #tag:release-version
version = "0.2.4"
